// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metadata determineMetadata should return app metadata with cjson:metadata 1`] = `
Array [
  Object {
    "name": "browser",
    "value": "No metadata.browser.name available No metadata.browser.version available",
  },
  Object {
    "name": "device",
    "value": "Device name not known",
  },
  Object {
    "name": "platform",
    "value": "Platform name not known Version not known",
  },
]
`;

exports[`metadata determineMetadata should return metadata with platform mac 1`] = `
Array [
  Object {
    "name": "browser",
    "value": "No metadata.browser.name available No metadata.browser.version available",
  },
  Object {
    "name": "device",
    "value": "Device name not known",
  },
  Object {
    "name": "platform",
    "value": "osx Version not known",
  },
]
`;

exports[`metadata determineMetadata should return metadata with platform osx 1`] = `
Array [
  Object {
    "name": "browser",
    "value": "No metadata.browser.name available No metadata.browser.version available",
  },
  Object {
    "name": "device",
    "value": "Device name not known",
  },
  Object {
    "name": "platform",
    "value": "osx Version not known",
  },
]
`;

exports[`metadata determineMetadata should return metadata with platfrom windows 1`] = `
Array [
  Object {
    "name": "browser",
    "value": "No metadata.browser.name available No metadata.browser.version available",
  },
  Object {
    "name": "device",
    "value": "Device name not known",
  },
  Object {
    "name": "platform",
    "value": "windows Version not known",
  },
]
`;

exports[`metadata determineMetadata should return no metadata when there is none 1`] = `
Array [
  Object {
    "name": "browser",
    "value": "No metadata.browser.name available No metadata.browser.version available",
  },
  Object {
    "name": "device",
    "value": "Device name not known",
  },
  Object {
    "name": "platform",
    "value": "Platform name not known Version not known",
  },
]
`;
